# GeorgePearse

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy.yml  gather-real-metrics.yml
data/: historical-metrics.json  metrics.csv
docs/: REAL_METRICS_GUIDE.md
scripts/: backfill-historical-metrics.ts  deploy-user-site.sh  gather-metrics.js  gather-metrics.ts  gather-real-metrics.ts
src/: App.tsx
src/components/: AboutSection.tsx  MarkdownContent.tsx  MetricsChart.tsx  NoteModal.tsx  NotesSection.tsx  ReadmeModal.tsx  RepositoryCard.tsx  RepositoryGrid.tsx  TagFilter.tsx
src/content/notes/: index.md
src/content/notes/tech/: late-interaction-retrieval.md
src/data/: cached-repos.json  notes.ts  repos-metrics.json
src/hooks/: useGitHubRepos.ts
src/styles/: index.css
src/types/: github.ts  notes.ts
src/utils/: proximityColor.ts  tagColors.ts
tests/: rendering.spec.ts
