[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-metrics"
version = "0.1.0"
description = "GitHub metrics tracking and visualization for profile README"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
